# hakoniwa-core

./: .gitignore  .gitmodules  CONTRIBUTING.hakoniwa-core.md  README.md
.github/workflows/: build_and_deploy.yml
docker/: Dockerfile  Dockerfile.ubuntu18  attach.bash  create-image.bash  run.bash
impl/asset/client/cpp/: CMakeLists.txt  hakoniwa_client.cc  hakoniwa_client.h  hakoniwa_command.cc  hakoniwa_process.h  hakoniwa_proxy.cc
impl/asset/server/csharp/: Asset.cs  AssetEvent.cs  AssetManager.cs  HakoniwaServer.cs  HakoniwaService.csproj  MainProgram.cs  Request.cs  RequestManager.cs  SimulationController.cs
impl/asset/server/csharp/AssetPdu/MiconPdu/: MiconPdu.csproj  SimpleMiconAssetController.cs  SimpleMiconPduReader.cs  SimpleMiconPduReaderRawConverter.cs  SimpleMiconPduWriter.cs  SimpleMiconPduWriterRawConverter.cs
impl/asset/server/csharp/HakoniwaCore/: Asset.cs  AssetEvent.cs  AssetManager.cs  Hakoniwa.csproj  HakoniwaCore.csproj  HakoniwaServer.cs  Hakoniwa_NoGRPC.csproj  Request.cs  RequestManager.cs  SimulationController.cs  build_by_docker.bash
impl/asset/server/csharp/HakoniwaCore/Core/: HakoCppWrapper.cs
impl/asset/server/csharp/HakoniwaCore/Core/Asset/: Asset.cs  AssetEvent.cs  AssetManager.cs  RegisteredAsset.cs
impl/asset/server/csharp/HakoniwaCore/Core/Communication/Channel/: ReaderChannel.cs  WriterChannel.cs
impl/asset/server/csharp/HakoniwaCore/Core/Rpc/: RpcClient.cs  RpcServer.cs
impl/asset/server/csharp/HakoniwaCore/Core/Simulation/: HakoAssetSimulationController.cs  HakoRpcAssetSimulationController.cs  IInsideWorldSimulatior.cs  ISimulationAssetManager.cs  ISimulationController.cs  Request.cs  RequestManager.cs  SimulationAssetManager.cs  SimulationController.cs  SimulationControllerFactory.cs
impl/asset/server/csharp/HakoniwaCore/Core/Utils/: LineBinaryStorage.cs  SimulationTimeStorage.cs  UtilTime.cs
impl/asset/server/csharp/HakoniwaCore/PluggableAsset/: AssetConfigLoader.cs  AssetConfiguration.cs  CoreConfig.cs
impl/asset/server/csharp/HakoniwaCore/PluggableAsset/Assets/: IAssetController.cs  IInsideAssetController.cs  IOutsideAssetController.cs
impl/asset/server/csharp/HakoniwaCore/Utils/: SimulationTimeStorage.cs
impl/asset/server/csharp/HakoniwaCoreTest/: HakoniwaCoreTest.csproj  Program.cs  WorldController.cs  core_config.json
impl/asset/server/csharp/HakoniwaCoreTest/HakoniwaCoreTest/: HakoniwaCoreTest.csproj  LineBinaryStorageTest.cs  Program.cs  core_config.json
impl/asset/server/csharp/HakoniwaCoreTest/utils/: config_proxy_udp_json.mo  start-hakoniwa.bash
impl/asset/server/csharp/HakoniwaRunner/: HakoniwaRunner.cs  HakoniwaSimTime.json  core_config.json
impl/cpp/: .clang-format  CMakeLists.txt  build.bash  default-cmake-options.cmake  install.bash
impl/cpp/sample/: CMakeLists.txt  README.md
impl/cpp/sample/base-procs/hako-asset/: CMakeLists.txt
impl/cpp/sample/base-procs/hako-asset/src/: hako_asset.cpp
impl/cpp/sample/base-procs/hako-cmd/: CMakeLists.txt
impl/cpp/sample/base-procs/hako-cmd/src/: hako_cmd.cpp
impl/cpp/sample/base-procs/hako-master/: CMakeLists.txt
impl/cpp/sample/base-procs/hako-master/src/: hako_master.cpp
impl/cpp/src/: CMakeLists.txt
impl/cpp/src/hako/: hako_asset_impl.cpp  hako_asset_impl.hpp  hako_impl.cpp  hako_master_impl.cpp  hako_master_impl.hpp  hako_simevent_impl.cpp  hako_simevent_impl.hpp
impl/cpp/src/hako/core/asset/: hako_remote_asset_event.cpp  hako_remote_asset_event.hpp
impl/cpp/src/hako/core/context/: hako_context.hpp
impl/cpp/src/hako/core/rpc/: hako_internal_rpc.cpp  hako_internal_rpc.hpp
impl/cpp/src/hako/core/simulation/time/: hako_time.cpp  hako_time.hpp
impl/cpp/src/hako/data/: hako_base_data.hpp  hako_master_data.hpp
impl/cpp/src/hako/utils/: hako_assert.hpp  hako_clock.hpp  hako_logger.cpp  hako_logger.hpp  hako_sem.cpp  hako_sem.hpp  hako_shared_memory.cpp  hako_shared_memory.hpp  hako_string.cpp  hako_string.hpp
impl/cpp/src/include/: hako.hpp  hako_asset.hpp  hako_master.hpp  hako_simevent.hpp  hako_simulation.hpp
impl/cpp/src/include/config/: hako_config.hpp
impl/cpp/src/include/types/: hako_types.hpp
impl/cpp/test/: CMakeLists.txt
impl/cpp/test/api/: main.cpp
impl/cpp/test/hako/: hako_shared_memory_test.cpp  hako_test.cpp  hako_time_test.cpp  main.cpp
spec/: hakoniwa_core.proto
spec/ev3/: hakoniwa_ev3.proto
spec/micon/: hakoniwa_micon.proto
(+115 files in other folders)
